deployment/book_store_db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-store-db-deployment
spec:
  selector:
    matchLabels:
      app: mysql8
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql8
        logs: "true"
    spec:
      containers:
        - name: mysql8
          image: mysql:8.0.22
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
            - name: init-db
              mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: init-db
          persistentVolumeClaim:
            claimName: init-pvc
        - name: data
          persistentVolumeClaim:
            claimName: book-store-pvc
---
## Service
apiVersion: v1
kind: Service
metadata:
  name: book-store-db-service
  labels:
    app: mysql8
spec:
  type: ClusterIP
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  selector:
    app: mysql8
---
