deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstore-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bookstore.app
    http:
      paths:
      - path: "/catalog"
        pathType: Prefix
        backend:
          service:
            name: cat-svc
            port:
              number: 3000
      - path: "/shipping"
        pathType: Prefix
        backend:
          service:
            name: shipping-servic
            port:
              number: 9090
      - path: "/payment"
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 9090
