deployment/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: book-store-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: book-store
spec:
  hosts:
  - "*"
  gateways:
  - book-store-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: book-store-service
        port:
          number: 9093
